# Python_WEB_ht12_REST_API-_auth

./: .gitignore  README.md  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py  schemas.py
app/repository/: contact_model.py  contact_repo.py
app/routers/: auth.py  contacts.py
